# Shortest-Path-to-Boundary-for-Self-Intersecting-Meshes

./: .gitmodules  CMakeLists.txt  README.md  Test.cpp
ShortestPath/CollisionDetector/: CollisionDetertionParameters.h  DiscreteCollisionDetector.cpp  DiscreteCollisionDetector.h  TriangleTriangleIntersection.h
ShortestPath/Materials/: Materials.h
ShortestPath/Parallelization/: CPUParallelization.h
ShortestPath/TetMesh/: TetMeshFEM.cpp  TetMeshFEM.h
ShortestPath/Types/: Types.h
TestData/: Parameters.json
